LuccaIcons [UPD] Added new icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>Lucca UI - Demo</title>
+	<title>Lucca Icons - Demo</title>
 
-    <link rel="stylesheet" href="styles/demo.sass.min.css"/>
+    <link rel="stylesheet" href="styles/demo.less.min.css"/>
 </head>
 <body>
 <h1>Lucca icons</h1>
@@ -15,6 +15,8 @@
     You can also use the available less mixin <code>.luccaIcons_make(forbidden, position)</code> (less) or <code>@include luccaIcons_make(forbidden, position)</code>.
 	Position can be either "right" or "left" and defaults to left if omitted.
 </p>
+
+<b class="demo mixin"></b>
 
 <h4>List of all available icons</h4>
 <ul class="icon-list">
@@ -374,9 +376,37 @@
       <i class="lui icon arrow north"></i>
       <input type="text" readonly="readonly" value="arrow north">
     </li>
-    <li>
+	<li>
       <i class="lui icon arrow south"></i>
       <input type="text" readonly="readonly" value="arrow south">
+    </li>
+	<li>
+      <i class="lui icon journey"></i>
+      <input type="text" readonly="readonly" value="journey">
+    </li>
+	<li>
+      <i class="lui icon tiles"></i>
+      <input type="text" readonly="readonly" value="tiles">
+    </li>
+	<li>
+      <i class="lui icon truck"></i>
+      <input type="text" readonly="readonly" value="truck">
+    </li>
+	<li>
+      <i class="lui icon location"></i>
+      <input type="text" readonly="readonly" value="location">
+    </li>
+	<li>
+      <i class="lui icon payment"></i>
+      <input type="text" readonly="readonly" value="payment">
+    </li>
+	<li>
+      <i class="lui icon pricetag"></i>
+      <input type="text" readonly="readonly" value="pricetag">
+    </li>
+	<li>
+      <i class="lui icon gallery"></i>
+      <input type="text" readonly="readonly" value="gallery">
     </li>
   </ul>
   </body>
