LuccaIcons [UPD] Added "analytical allocation" icon

--- a/demo/index.html
+++ b/demo/index.html
@@ -408,6 +408,10 @@
       <i class="lui icon gallery"></i>
       <input type="text" readonly="readonly" value="gallery">
     </li>
+	<li>
+      <i class="lui icon analytical allocation"></i>
+      <input type="text" readonly="readonly" value="analytical allocation">
+    </li>
   </ul>
   </body>
   </html>
