LuccaIcons [ADD] Added new icons: "drag2" & "jumping cc"

--- a/demo/index.html
+++ b/demo/index.html
@@ -241,8 +241,8 @@
       <input type="text" readonly="readonly" value="bookmark">
     </li>
     <li>
-      <i class="lui icon coins"></i>
-      <input type="text" readonly="readonly" value="coins">
+      <i class="lui icon database"></i>
+      <input type="text" readonly="readonly" value="database">
     </li>
     <li>
       <i class="lui icon milestone"></i>
@@ -411,6 +411,14 @@
 	<li>
       <i class="lui icon analytical allocation"></i>
       <input type="text" readonly="readonly" value="analytical allocation">
+    </li>
+	<li>
+      <i class="lui icon drag2"></i>
+      <input type="text" readonly="readonly" value="drag2">
+    </li>
+		<li>
+      <i class="lui icon jumping cc"></i>
+      <input type="text" readonly="readonly" value="jumping cc">
     </li>
   </ul>
   </body>
