Demo [UPD] Updated demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -33,19 +33,19 @@
       <input type="text" readonly="readonly" value="analytics">
     </li>
     <li>
-      <i class="lui icon chevron east"></i>
+      <i class="lui east chevron icon"></i>
       <input type="text" readonly="readonly" value="chevron east">
     </li>
     <li>
-      <i class="lui icon chevron north"></i>
+      <i class="lui north chevron icon"></i>
       <input type="text" readonly="readonly" value="chevron north">
     </li>
     <li>
-      <i class="lui icon chevron south"></i>
+      <i class="lui south chevron icon"></i>
       <input type="text" readonly="readonly" value="chevron south">
     </li>
     <li>
-      <i class="lui icon chevron west"></i>
+      <i class="lui west chevron icon"></i>
       <input type="text" readonly="readonly" value="chevron west">
     </li>
     <li>
@@ -153,12 +153,12 @@
       <input type="text" readonly="readonly" value="move">
     </li>
     <li>
-      <i class="lui icon move h"></i>
-      <input type="text" readonly="readonly" value="move h">
+      <i class="lui icon move horizontally"></i>
+      <input type="text" readonly="readonly" value="move horizontally">
     </li>
     <li>
-      <i class="lui icon move v"></i>
-      <input type="text" readonly="readonly" value="move v">
+      <i class="lui icon move vertically"></i>
+      <input type="text" readonly="readonly" value="move vertically">
     </li>
     <li>
       <i class="lui icon notification"></i>
@@ -198,7 +198,7 @@
     </li>
     <li>
       <i class="lui icon to user"></i>
-      <input type="text" readonly="readonly" value="send to user">
+      <input type="text" readonly="readonly" value="to user">
     </li>
     <li>
       <i class="lui icon settings"></i>
@@ -365,15 +365,15 @@
       <input type="text" readonly="readonly" value="breakfast">
     </li>
     <li>
-      <i class="lui icon arrow west"></i>
-      <input type="text" readonly="readonly" value="arrow west">
+      <i class="lui west arrow icon"></i>
+      <input type="text" readonly="readonly" value="east arrow">
     </li>
     <li>
-      <i class="lui icon arrow east"></i>
+      <i class="lui east arrow icon"></i>
       <input type="text" readonly="readonly" value="arrow east">
     </li>
     <li>
-      <i class="lui icon arrow north"></i>
+      <i class="lui north arrow icon"></i>
       <input type="text" readonly="readonly" value="arrow north">
     </li>
 	<li>
