--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Lucca Icons - Demo</title>
 
-    <link rel="stylesheet" href="styles/demo.less.min.css"/>
+    <link rel="stylesheet" href="styles/demo.sass.min.css"/>
 </head>
 <body>
 <h1>Lucca icons</h1>
