Icons [ADD] Adds new 'add bookmark' and 'remove bookmark' icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -236,9 +236,17 @@
       <i class="lui icon bank card"></i>
       <input type="text" readonly="readonly" value="bank card">
     </li>
-    <li>
+	<li>
       <i class="lui icon bookmark"></i>
       <input type="text" readonly="readonly" value="bookmark">
+    </li>
+	<li>
+      <i class="lui icon add bookmark"></i>
+      <input type="text" readonly="readonly" value="add bookmark">
+    </li>
+	<li>
+      <i class="lui icon remove bookmark"></i>
+      <input type="text" readonly="readonly" value="remove bookmark">
     </li>
     <li>
       <i class="lui icon database"></i>
