--- a/demo/index.html
+++ b/demo/index.html
@@ -424,9 +424,13 @@
       <i class="lui icon drag2"></i>
       <input type="text" readonly="readonly" value="drag2">
     </li>
-		<li>
+	<li>
       <i class="lui icon jumping cc"></i>
       <input type="text" readonly="readonly" value="jumping cc">
+    </li>
+	<li>
+      <i class="lui sliders icon"></i>
+      <input type="text" readonly="readonly" value="sliders">
     </li>
   </ul>
   </body>
