lucca.icons [ADD] roles icon

--- a/demo/index.html
+++ b/demo/index.html
@@ -432,6 +432,10 @@
       <i class="lui sliders icon"></i>
       <input type="text" readonly="readonly" value="sliders">
     </li>
+  <li>
+      <i class="lui roles icon"></i>
+      <input type="text" readonly="readonly" value="roles">
+    </li>    
   </ul>
   </body>
   </html>
